--- a/inventarios/inventarios/staticfiles/templates/html/app/list-bodegas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-bodegas.html
@@ -140,7 +140,7 @@
         fetch(`/user/bodegas/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
