--- a/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-lotes.html
@@ -135,7 +135,7 @@
         fetch(`/user/lotes/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
