--- a/inventarios/staticfiles/templates/html/app/add-ingrediente.html
+++ b/inventarios/staticfiles/templates/html/app/add-ingrediente.html
@@ -63,11 +63,17 @@
         ingrediente_id = null;
         {%endif%}
 
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
         if (ingrediente_id) {
             // Si existe un user_id en la URL, estamos en modo de edición
             fetch(`/insumos/editar/ingrediente/${ingrediente_id}/`, {
                 headers: {
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 }
             })
                 .then(response => response.json())
@@ -115,10 +121,16 @@
         const method = ingrediente_id ? 'PUT' : 'POST';
         const url = ingrediente_id ? `/insumos/ingredientes-activos/retrieve/${ingrediente_id}/` : `/insumos/ingredientes-activos/list-create/`;
 
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
