--- a/inventarios/staticfiles/templates/html/app/add-unidad.html
+++ b/inventarios/staticfiles/templates/html/app/add-unidad.html
@@ -74,11 +74,17 @@
         unidad_id = null;
         {%endif%}
 
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
         if (unidad_id) {
             // Si existe un user_id en la URL, estamos en modo de edición
             fetch(`/insumos/editar/unidad/${unidad_id}/`, {
                 headers: {
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 }
             })
                 .then(response => response.json())
@@ -114,10 +120,16 @@
         const method = unidad_id ? 'PUT' : 'POST';
         const url = unidad_id ? `/insumos/unidades-medida/retrieve/${unidad_id}/` : `/insumos/unidades-medida/list-create/`;
 
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
