--- a/inventarios/inventarios/staticfiles/templates/html/app/add-ingrediente.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-ingrediente.html
@@ -67,7 +67,7 @@
             // Si existe un user_id en la URL, estamos en modo de edición
             fetch(`/insumos/editar/ingrediente/${ingrediente_id}/`, {
                 headers: {
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 }
             })
                 .then(response => response.json())
@@ -118,7 +118,7 @@
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
