--- a/inventarios/inventarios/staticfiles/templates/html/app/add-insumo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-insumo.html
@@ -95,7 +95,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         fetch('/insumos/certificaciones/list-create/', {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
@@ -135,7 +135,7 @@
         // Si existe un providerId, estamos en modo de edición
         fetch(`/insumos/editar/${insumoId}/`, {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
         .then(response => response.json())
@@ -205,7 +205,7 @@
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
