--- a/inventarios/inventarios/staticfiles/templates/html/app/add-usuario.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-usuario.html
@@ -156,7 +156,7 @@
         // Si existe un user_id en la URL, estamos en modo de edición
         fetch(`/user/info/edit/${userId}/`, {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
         .then(response => response.json())
@@ -237,7 +237,7 @@
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
