--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas-inicial.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas-inicial.html
@@ -68,7 +68,10 @@
 
 
 <!--<script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+    //const accessToken = accessToken;
+    const accessToken ="{{token}}"
+    {% endif %}
  
     fetch('/entradas/list-create/', {
         headers: {
@@ -160,7 +163,7 @@
         fetch(`/proveedores/retrieve/${userId}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
