--- a/inventarios/inventarios/staticfiles/templates/html/app/list-fincas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-fincas.html
@@ -130,7 +130,7 @@
         fetch(`/user/finca/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
