--- a/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-insumos.html
@@ -96,7 +96,10 @@
 
 
 <script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+    //const accessToken = accessToken;
+    const accessToken ="{{token}}"
+    {% endif %}
     
     document.addEventListener("DOMContentLoaded", function() {
         // URL de tu API
@@ -211,7 +214,7 @@
         fetch(`/insumos/retrieve/${userId}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
