--- a/inventarios/inventarios/staticfiles/templates/html/app/list-proveedor.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-proveedor.html
@@ -72,7 +72,10 @@
 
 
 <script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+    //const accessToken = accessToken;
+    const accessToken ="{{token}}"
+    {% endif %}
 
     fetch('/proveedores/list-create/', {
         headers: {
@@ -197,7 +200,7 @@
         fetch(`/proveedores/retrieve/${userId}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
