--- a/inventarios/inventarios/staticfiles/templates/html/app/list-unidad.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-unidad.html
@@ -83,7 +83,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         fetch('/insumos/unidades-medida/list-create/', {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
@@ -152,7 +152,7 @@
             fetch(`/insumos/unidades-medida/retrieve/${ingredientId}/`, {
                 method: 'DELETE',
                 headers: {
-                    'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                    'Authorization': `Bearer ${accessToken}`
                 }
             })
                 .then(data => {
