--- a/inventarios/inventarios/staticfiles/templates/html/app/list-usuarios.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-usuarios.html
@@ -61,7 +61,10 @@
 
 
 <script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+    //const accessToken = accessToken;
+    const accessToken ="{{token}}"
+    {% endif %}
 
     fetch('/user/info/all/', {
         headers: {
@@ -180,7 +183,7 @@
         fetch(`/user/delete_user/${userId}/`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
