--- a/inventarios/staticfiles/templates/html/app/add-entradas.html
+++ b/inventarios/staticfiles/templates/html/app/add-entradas.html
@@ -356,12 +356,18 @@
         
         var url = isEditMode ? `/entradas/retrieve/${entradas_id}/` : '/entradas/list-create/';
         var httpMethod = isEditMode ? 'PUT' : 'POST';
+
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
     
         fetch(url, {
             method: httpMethod,
             headers: {
                 'Content-Type': 'application/json',
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             },
             body: JSON.stringify(payload)
         })
