--- a/inventarios/staticfiles/templates/html/app/add-insumo.html
+++ b/inventarios/staticfiles/templates/html/app/add-insumo.html
@@ -95,7 +95,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         fetch('/insumos/certificaciones/list-create/', {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
@@ -131,11 +131,17 @@
     {% if insumoId %}
     const insumoId = parseInt("{{insumoId}}");
 
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
     if (insumoId) {
         // Si existe un providerId, estamos en modo de edición
         fetch(`/insumos/editar/${insumoId}/`, {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
         .then(response => response.json())
@@ -201,11 +207,17 @@
             url = `/insumos/list-create/`;
             mensaje = 'Insumo creado exitosamente';
         }
+
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
     
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
