--- a/inventarios/staticfiles/templates/html/app/add-lotes.html
+++ b/inventarios/staticfiles/templates/html/app/add-lotes.html
@@ -156,11 +156,17 @@
     var url = isEditMode ? `/user/lotes/retrieve/${lotes_id}/` : '/user/lotes/list-create/';
     var httpMethod = isEditMode ? 'PUT' : 'POST';
 
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
     fetch(url, {
         method: httpMethod,
         headers: {
             'Content-Type': 'application/json',
-            'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+            'Authorization': `Bearer ${accessToken}`
         },
         body: JSON.stringify(payload)
     })
