--- a/inventarios/staticfiles/templates/html/app/add-proveedor.html
+++ b/inventarios/staticfiles/templates/html/app/add-proveedor.html
@@ -134,12 +134,18 @@
     const providerId = null;
     {% endif %}
 
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
 
     if (providerId) {
         // Si existe un providerId, estamos en modo de edición
         fetch(`/proveedores/edit/${providerId}/`, {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
         .then(response => response.json())
@@ -209,11 +215,17 @@
             url = `/proveedores/list-create/`;
             message = "Proveedor Creado Correctamente";
         }
+
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
     
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
