--- a/inventarios/staticfiles/templates/html/app/add-salidas.html
+++ b/inventarios/staticfiles/templates/html/app/add-salidas.html
@@ -135,11 +135,16 @@
         {% endif %}
 
         var formData = new FormData(document.getElementById('insumoform'));
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         fetch('/salidas/crearsalida/', {
             method: 'POST',
             body: formData,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
