--- a/inventarios/staticfiles/templates/html/app/add-usuario.html
+++ b/inventarios/staticfiles/templates/html/app/add-usuario.html
@@ -152,11 +152,17 @@
     {% else %}const userId = null;
     {% endif %}
 
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
     if (userId) {
         // Si existe un user_id en la URL, estamos en modo de edición
         fetch(`/user/info/edit/${userId}/`, {
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
         .then(response => response.json())
@@ -221,6 +227,12 @@
         {% else %}const userId = null;
         {% endif %}
 
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
         let method, url;
         if (userId) {
             // Edición
@@ -237,7 +249,7 @@
         fetch(url, {
             method: method,
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`,
+                'Authorization': `Bearer ${accessToken}`,
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify(formData)
