--- a/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -114,7 +114,10 @@
 
 
 <!--<script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+    //const accessToken = accessToken;
+    const accessToken ="{{token}}"
+    {% endif %}
  
     fetch('/entradas/list-create/', {
         headers: {
@@ -213,7 +216,12 @@
 
 <script>
     function deleteUser(userId, row) {
-        fetch(`/entradas/retrieve/delete/${userId}`, {method: 'DELETE',headers: {'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`}})
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+        fetch(`/entradas/retrieve/delete/${userId}`, {method: 'DELETE',headers: {'Authorization': `Bearer ${accessToken}`}})
             .then(data => {
                 if (data.status==204) {
                     row.remove();
