--- a/inventarios/staticfiles/templates/html/app/list-lotes.html
+++ b/inventarios/staticfiles/templates/html/app/list-lotes.html
@@ -132,10 +132,15 @@
 
 <script>
     function deleteUser(bodegas_id, row) {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         fetch(`/user/lotes/retrieve/${bodegas_id}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
