--- a/inventarios/staticfiles/templates/html/app/list-salidas.html
+++ b/inventarios/staticfiles/templates/html/app/list-salidas.html
@@ -136,11 +136,16 @@
 
 <script>
     function deleteUser(userId, row) {
+        {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
         
         fetch(`/salidas/retrieve/${userId}`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(data => {
