--- a/inventarios/staticfiles/templates/html/app/list-usuarios.html
+++ b/inventarios/staticfiles/templates/html/app/list-usuarios.html
@@ -61,7 +61,13 @@
 
 
 <script>
-    const accessToken = sessionStorage.getItem('accessToken');
+    {% if user.is_authenticated %}
+        const accessToken = "{{token}}"
+        {%else%}
+        const accessToken = ""
+        {% endif %}
+
+
 
     fetch('/user/info/all/', {
         headers: {
@@ -180,7 +186,7 @@
         fetch(`/user/delete_user/${userId}/`, {
             method: 'DELETE',
             headers: {
-                'Authorization': `Bearer ${sessionStorage.getItem('accessToken')}`
+                'Authorization': `Bearer ${accessToken}`
             }
         })
             .then(response => response.json())
