--- a/inventarios/staticfiles/templates/html/app/add-bodegas.html
+++ b/inventarios/staticfiles/templates/html/app/add-bodegas.html
@@ -14,7 +14,7 @@
                 <div class="row"> 
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label for="nombre_finca">Nombre de Finca *</label>
+                            <label for="nombre_finca">Nombre de Bodega *</label>
                             {% if bodegas_id %}
                             <input type="text" class="form-control" placeholder="Ingrese Número de la Bodega" required id="nombre_bodega" name="nombre_bodega" value="{{bodega_edit.nombre_bodega}}">
                             {% else %}
