--- a/inventarios/staticfiles/templates/html/app/add-certificacion.html
+++ b/inventarios/staticfiles/templates/html/app/add-certificacion.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="card-body">
-            <form action="page-list-users.html" data-toggle="validator" id="certform" name="certform">
+            <form data-toggle="validator" id="certform" name="certform">
                 <div class="row"> 
                     <div class="col-md-6">                      
                         <div class="form-group">
@@ -94,6 +94,11 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
+        {% if user.is_authenticated %}
+            const accessToken = "{{token}}"
+            {%else%}
+            const accessToken = ""
+            {% endif %}
 
         let cert_id;
         {% if cert_id %}
@@ -132,6 +137,7 @@
         {%else%}
         const accessToken = ""
         {% endif %}
+        
             fetch(`/insumos/editar/certificacion/${cert_id}/`, {
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
@@ -187,10 +193,10 @@
             const httpMethod = cert_id ? 'PUT' : 'POST';  // Método PUT para edición, POST para creación
 
             {% if user.is_authenticated %}
-        const accessToken = "{{token}}"
-        {%else%}
-        const accessToken = ""
-        {% endif %}
+            const accessToken = "{{token}}"
+            {%else%}
+            const accessToken = ""
+            {% endif %}
 
             fetch(apiEndpoint, {
                 method: httpMethod,
