--- a/inventarios/staticfiles/templates/html/app/add-unidad.html
+++ b/inventarios/staticfiles/templates/html/app/add-unidad.html
@@ -139,7 +139,7 @@
                 showAlertInModal('Error al guardar el Grupo.');
             }
             const actionMsg = unidad_id ? 'editado' : 'creado';
-            showAlertInModal(`Grupo ${actionMsg} exitosamente!`);
+            showAlertInModal(`Unidad de medida ${actionMsg} exitosamente!`);
         })
         .then(data => {
         })
