--- a/inventarios/staticfiles/templates/html/app/list-bodegas.html
+++ b/inventarios/staticfiles/templates/html/app/list-bodegas.html
@@ -136,6 +136,22 @@
 </script>
 
 <script>
+
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Buscar la cookie por nombre
+                if (cookie.substring(0, name.length + 1) === name + '=') {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
     function deleteUser(bodegas_id, row) {
         {% if user.is_authenticated %}
         const accessToken = "{{token}}"
@@ -144,7 +160,7 @@
         {% endif %}
         fetch(`/user/bodegas/retrieve/${bodegas_id}`, {
             method: 'DELETE',
-            headers: {
+            headers: {'X-CSRFToken': getCookie('csrftoken'),
                 'Authorization': `Bearer ${accessToken}`
             }
         })
